# zero-to-production

./: .env.example  .gitignore  Cargo.toml  README.md  configuration.yaml.example
.cargo/: config.toml
migrations/: 20240323165603_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
