[package]
name = "zero-to-production"
version = "0.1.0"
edition = "2021"
authors = ["DK KIM"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero-to-production"

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.24"
